image loading refactoring

--- a/VK_app/View/Main.storyboard
+++ b/VK_app/View/Main.storyboard
@@ -639,7 +639,7 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="vVy-tX-eer"/>
+        <segue reference="czs-Ne-Wwh"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="1" width="128" height="128"/>
